corrected title alignment on snall width viewports

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -8,8 +8,8 @@
 }
 
 .ourPhoto:hover{
-    transform: scale(1.1);
-    transition: all .3s ease-in-out;
+    transform: scale(1.05);
+    transition: all .5s ease-in-out;
 }
 
 .bgEffect{
